# testable-rust-web-project

./: .env  .gitignore  Cargo.toml  README.md  test-stack.yml
migrations/: 000000_init.sql
src/: main.rs
src/auth/: auth_service_impl.rs  mod.rs  ports.rs  postgres_credential_repo.rs  redis_token_repo.rs  rest_auth_controller.rs
src/infrastructure/: mod.rs  postgresql.rs  redis.rs
